2007-08-19 [colin]	2.10.0cvs135

	* src/imap.c
		Fix previous commit. Sensitivity update is needed
		for "Cancel receiving". However when batching we
		don't need to do it for every message flag change,
		just once at the start and once at the end.

2007-08-19 [colin]	2.10.0cvs134

	* src/imap.c
		Remove useless menu updates on session lock/unlock

2007-08-19 [colin]	2.10.0cvs133

	* src/etpan/imap-thread.c
		Make all fetch logs less verbose

2007-08-19 [paul]	2.10.0cvs132

	* src/foldersel.c
	* src/folderview.c
	* src/summaryview.c
		fix bug 1286, 'Can't move a folder into a "Folders
		Only" folder'

2007-08-18 [ticho]	2.10.0cvs131

	* src/editaddress_other_attributes_ldap.c
		Converted option menu for other ldap attributes to GtkComboBox.

2007-08-18 [colin]	2.10.0cvs130

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_send.c
	* src/send_message.c
		Revert 'send_dialog_mode' meaning to 
		'send_dialog_invisible', so that the 
		new checkbox doesn't change the 
		existing behaviour.

2007-08-18 [paul]	2.10.0cvs129

	* src/summaryview.c
		add missing menu update

2007-08-17 [colin]	2.10.0cvs128

	* src/folder.c
		Set batching after getting flags - maybe fixes
		bug 1292, 'CM crashes on writing mail'

2007-08-16 [ticho]	2.10.0cvs127

	* src/prefs_send.c
		Convert two GtkOptionMenu widgets to new GtkComboBox.
	* src/gtk/combobox.h
	* src/gtk/gtkutils.c
		Allow NULL for GtkComboBox menuitem label, rendering such
		items as row separators.

2007-08-16 [paul]	2.10.0cvs126

	* src/plugins/trayicon/trayicon.c
		remove wrongly used gettextisation

2007-08-15 [ticho]	2.10.0cvs125

	* src/importldif.c
		Fixed a runtime warning where an attempt to pack an
		already packed GtkLabel was made.

2007-08-15 [ticho]	2.10.0cvs124

	* src/prefs_compose_writing.c
		Convert the insert-or-attach-dragged-files GtkOptionMenu
		into GtkComboBox.

2007-08-14 [ticho]	2.10.0cvs123

	* src/messageview.c
	* src/gtk/gtkutils.c