@@ -2790,3 +2790,4 @@
 ( cvs diff -u -r 1.1.4.82 -r 1.1.4.83 src/etpan/imap-thread.c;  ) > 2.10.0cvs133.patchset
 ( cvs diff -u -r 1.179.2.181 -r 1.179.2.182 src/imap.c;  ) > 2.10.0cvs134.patchset
 ( cvs diff -u -r 1.179.2.182 -r 1.179.2.183 src/imap.c;  ) > 2.10.0cvs135.patchset
+( cvs diff -u -r 1.2.4.17 -r 1.2.4.18 src/browseldap.c;  cvs diff -u -r 1.8.2.24 -r 1.8.2.25 src/editldap.c;  cvs diff -u -r 1.2.2.11 -r 1.2.2.12 src/ldapctrl.c;  cvs diff -u -r 1.3.2.20 -r 1.3.2.21 src/ldapquery.c;  cvs diff -u -r 1.4.2.11 -r 1.4.2.12 src/ldapquery.h;  cvs diff -u -r 1.4.2.11 -r 1.4.2.12 src/ldapserver.c;  cvs diff -u -r 1.1.4.8 -r 1.1.4.9 src/ldaputil.c;  ) > 2.10.0cvs136.patchset
